# cPAID_mitre_atlas_yolo

./: .gitignore  README.md  pyproject.toml
atlas_mapping/: __init__.py  image_analyzer.py  models.py  planner.py  profiles.py
notebooks/: maritime_atlas_demo.ipynb
tests/: test_image_analyzer.py  test_planner.py
